--- a/app/css/additional-styles/utility-patterns.css
+++ b/app/css/additional-styles/utility-patterns.css
@@ -28,7 +28,7 @@
 /* Buttons */
 .btn,
 .btn-sm {
-  @apply font-medium inline-flex items-center justify-center border border-transparent rounded-full leading-snug;
+  @apply font-semibold inline-flex items-center justify-center border border-transparent rounded-full leading-snug;
 }
 
 .btn {
@@ -37,6 +37,10 @@
 
 .btn-sm {
   @apply px-4 py-2 shadow;
+}
+
+.btn-text {
+  @apply font-semibold;
 }
 
 /* Forms */
