--- a/app/css/style.css
+++ b/app/css/style.css
@@ -189,3 +189,15 @@ html::-webkit-scrollbar {
     transform: translateX(calc(-250px * 2.5));
   }
 } */
+
+.blue-wave {
+  transform: scale(0);
+  opacity: 0;
+  z-index: -1;
+  transition: all 0.1s ease;
+}
+
+.hero-btn:hover .blue-wave {
+  transform: scale(1);
+  opacity: 1;
+}
