--- a/app/css/additional-styles/utility-patterns.css
+++ b/app/css/additional-styles/utility-patterns.css
@@ -1,18 +1,18 @@
 /* Typography */
 .h1 {
-  @apply text-4xl font-extrabold leading-tight tracking-tighter;
+  @apply text-4xl font-extrabold leading-tight tracking-tighter text-white;
 }
 
 .h2 {
-  @apply text-3xl font-extrabold leading-tight tracking-tighter;
+  @apply text-3xl font-extrabold leading-tight tracking-tighter text-white;
 }
 
 .h3 {
-  @apply text-3xl font-bold leading-tight;
+  @apply text-3xl font-bold leading-tight text-white;
 }
 
 .h4 {
-  @apply text-2xl font-bold leading-snug tracking-tight;
+  @apply text-2xl font-bold leading-snug tracking-tight text-white;
 }
 
 @screen md {
@@ -81,4 +81,54 @@
 .form-checkbox,
 .form-radio {
   @apply text-gray-800 rounded-sm;
+}
+
+/* table */
+.table {
+  @apply w-full border-collapse table-auto table-fixed;
+}
+
+.table th,
+.table td {
+  @apply py-2 px-4 border border-[#151923] text-white;
+}
+
+.table th {
+  @apply font-semibold text-left py-4 px-8 bg-[#0e1015] sticky top-[calc(5rem)] md:top-[calc(5.5rem)];
+}
+
+.table th:first-child {
+  @apply sm:max-w-[200px];
+}
+
+.table th:first-child h1 {
+  @apply pb-2;
+}
+
+/* .table th {
+  @apply hidden sm:table-cell;
+} */
+
+.table th:not(:first-child) h1 {
+  @apply pb-4 text-center text-4xl;
+}
+
+.table th .btn-sm {
+  @apply w-full;
+}
+
+.table td {
+  @apply text-sm sm:bg-[#0e1015] text-[#858BA0] py-5;
+}
+
+.table td:first-child {
+  @apply px-8;
+}
+
+.table td:not(:first-child) {
+  @apply text-center;
+}
+
+.table tr {
+  @apply flex flex-col flex-nowrap sm:table-row;
 }
