--- a/app/css/style.css
+++ b/app/css/style.css
@@ -61,6 +61,72 @@ html::-webkit-scrollbar {
   display: none;
 }
 
+/* Toggle Input Styling */
+.toggle {
+  position: relative;
+  height: 32px;
+  display: flex;
+  align-items: center;
+  box-sizing: border-box;
+}
+.toggle input[type="checkbox"] {
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 10;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  opacity: 0;
+}
+.toggle label {
+  position: relative;
+  display: flex;
+  height: 100%;
+  align-items: center;
+  box-sizing: border-box;
+}
+.toggle label:before {
+  content: "";
+  background: #006aff;
+  height: 30px;
+  width: 60px;
+  border-radius: 20px;
+  box-shadow: inset 0 0.1em 0.03em #0002, inset 0 0.1em 0.3em #0003;
+  position: relative;
+  display: inline-block;
+  box-sizing: border-box;
+  transition: 0.2s ease-in;
+}
+.toggle label:after {
+  content: "";
+  position: absolute;
+  top: 4px;
+  left: 3px;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  z-index: 2;
+  display: grid;
+  place-content: center;
+  font-size: 20px;
+  font-family: arial;
+  font-weight: bold;
+  box-sizing: border-box;
+  color: #fff;
+  background: #fff;
+  box-shadow: -2px 2px 4px #0004;
+  transition: 0.25s ease-in-out;
+}
+.toggle input[type="checkbox"]:checked + label:before {
+  background: #006aff;
+}
+.toggle input[type="checkbox"]:checked + label:after {
+  content: "";
+  background: #fff;
+  transform: translatex(29px);
+}
+
 .desktop-wide,
 .desktop {
   display: none;
