hover hero button + remove see demos

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -265,6 +265,11 @@ html::-webkit-scrollbar {
 }
 
 .hero-btn:hover .blue-wave {
-  transform: scale(1);
+  transform: scale(0.85);
   opacity: 1;
+}
+
+.hero-btn:hover .hero-button-bg {
+  background: transparent !important;
+  border-left: 1px solid #006aff !important;
 }
