hero button bg-blue

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -309,7 +309,7 @@ html::-webkit-scrollbar {
   opacity: 1;
 }
 
-.hero-btn:hover .hero-button-bg {
+/* .hero-btn:hover .hero-button-bg {
   background: transparent !important;
   border-left: 1px solid #006aff !important;
-}
+} */
